recipe list overflow bug fix

--- a/src/app/recipes/recipes-list/recipes-list.component.scss
+++ b/src/app/recipes/recipes-list/recipes-list.component.scss
@@ -10,7 +10,7 @@
 }
 
 .recipe-list-wrapper {
-  margin: 1rem 0;
+  margin: 0.5rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   grid-auto-rows: minmax(100px, auto);
