--- a/src/app/styles/_margins.scss
+++ b/src/app/styles/_margins.scss
@@ -3,6 +3,7 @@
 .m-1rem {
   margin: 1rem;
 }
+
 .m-01{
   margin: 0 1rem;
 }
@@ -13,6 +14,9 @@
   margin: 0.25rem 0
 }
 
+.m-8{
+  margin: 8px;
+}
 
 // margin-top
 
